Fixed Mobile Nav Menu z-index

--- a/assets/styles/modules/Nav/Nav.module.scss
+++ b/assets/styles/modules/Nav/Nav.module.scss
@@ -678,8 +678,8 @@
 // Responsive
 @media all and (max-width: 1995px) {
   .desktop_nav_mega_menu {
-    border-left: 10px solid white;
-    border-right: 10px solid white;
+    // border-left: 10px solid white;
+    // border-right: 10px solid white;
     padding-left: 65px;
     padding-right: 80px;
 
